# graph-hackathon-2023

./: .env.example  .gitignore  .gitmodules  CODEOWNERS  NFT-Marketplace.txt  README.md  ai_design.drawio  app.py  app2.py  dashboard_flow.drawio  examples.py  graphql_examples.py  llamaindextest.py  poc.py  pyproject.toml  requirements.txt  test.py  thegraph.py
backend/: .env.example  .flaskenv  Dockerfile  chat.py  cookiecutter-options.yml  docker-compose.yml  index.json  requirements.txt  setup.py  tox.ini
backend/backend/: app.py  config.py  extensions.py  manage.py
backend/backend/api/: __init__.py  views.py
backend/backend/api/resources/: __init__.py  dashboard.py  user.py
backend/backend/api/schemas/: __init__.py  dashboard.py  user.py
backend/backend/auth/: __init__.py  helpers.py  views.py
backend/backend/commons/: apispec.py
backend/backend/models/: __init__.py  blocklist.py  dashboard.py  user.py
backend/backend/public/: __init__.py  views.py
backend/migrations/versions/: 4b4a97de5b7d_.py  7e7a49b90c5f_.py  88439f3d14de_.py  c4eade241615_.py
backend/tests/: conftest.py  factories.py  test_user.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  constants.js  index.js  store.js
frontend/src/Components/: Connect.js  CustomizedInputBase.js  Metamask-web3.js  Metamask.js  customStyling.js  navBar.js  simpleHtmlChart.js  table.js
frontend/src/redux/: rootReducer.js
helpers/: graphql_examples.py  openai_examples.py  schemas.py  subgraphs.py  thegraph.py
(+23 files in other folders)
