[tool.poetry]
name = "graph-hackathon-2023"
version = "0.1.0"
description = "Packages for Data Abstraction Layer on top of the graph"
authors = ["Marissa Posner"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
requests = "^2.28.2"
pandas = "^1.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

